<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_announcement"
            android:checked="true"
            android:icon="@drawable/ic_announcement"
            android:title="@string/menu_annoucement" />

        <item
            android:id="@+id/menu_disaster"
            android:icon="@drawable/ic_precaution"
            android:title="@string/menu_precautionary" />

        <item
            android:id="@+id/menu_hotline"
            android:icon="@drawable/ic_hotline"
            android:title="@string/menu_hotline" />


        <item
            android:id="@+id/menu_safe_zone"
            android:icon="@drawable/ic_safe_zone"
            android:title="@string/menu_safe_zone" />

        <item
            android:id="@+id/menu_account_info"
            android:icon="@drawable/ic_account_info"
            android:title="@string/menu_account_info" />

    </group>
</menu>