<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <com.olfu.olfudisasterapp.widgets.TextViewMed
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fire_respond_alarm"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/respond" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/respond2" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/respond3" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/respond4" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/respond5" />

            <com.olfu.olfudisasterapp.widgets.TextViewMed
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fire_way_through"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/way" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/way2" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/way3" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/way4" />

            <com.olfu.olfudisasterapp.widgets.TextViewMed
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/fire_leave_building"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/leave" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/leave2" />

            <com.olfu.olfudisasterapp.widgets.TextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:text="@string/leave3" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
