<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_precautionary_flood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.olfu.olfudisasterapp.activity.PrecautionaryFloodActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.olfu.olfudisasterapp.widgets.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:text="@string/flood" />

    <com.olfu.olfudisasterapp.widgets.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:text="@string/flood2" />

    <com.olfu.olfudisasterapp.widgets.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="8dp"
        android:text="@string/flood3" />
</LinearLayout>
