<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <com.olfu.olfudisasterapp.widgets.TextViewLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/containerInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/create_account"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/containerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAccType"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/actAccType"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:hint="@string/account_type" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.olfu.olfudisasterapp.widgets.EditTextRoman
                android:id="@+id/etEmail"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.olfu.olfudisasterapp.widgets.EditTextRoman
                android:id="@+id/etUsername"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/TextInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.olfu.olfudisasterapp.widgets.EditTextRoman
                android:id="@+id/etPassword"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorPrimaryText" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <com.olfu.olfudisasterapp.widgets.ButtonMed
        android:id="@+id/btnNext"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_default_selector"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@drawable/button_text_default_selector" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.olfu.olfudisasterapp.widgets.TextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/account_exists" />

        <com.olfu.olfudisasterapp.widgets.TextViewMed
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_here"
            android:textColor="@color/textLink" />

    </LinearLayout>
</RelativeLayout>